@startuml Profile_Builder_Subsystem
skinparam backgroundColor #FAFAFA
skinparam defaultFontName Arial
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam noteBackgroundColor #FFFFEE
skinparam noteBorderColor #AAAAAA
hide empty members

note “Builder Pattern\nValidated construction of complex Patient profiles” as NB

class PatientProfileBuilder {
  - name : String  <<final>>
  - age : int  <<final>>
  - gender : String  <<final>>
  - doctorEmail : String
  - organizationId : String
  - email : String
  - phone : String
  - chronicConditions : List<ChronicCondition>
  - allergies : List<PatientAllergy>
  - emergencyContact : EmergencyContact
  - insuranceDetails : InsuranceDetails
  ..Validation rules..
  EMAIL_PATTERN : /^[^\n@]+@[^\n@]+\/[^\n@]+$/
  ICD_PATTERN   : /^[A-Z][0-9]{2}(\/.[0-9]+)?$/
  phone         : ≥7 digits
  age           : 0–150
  ..Builder methods..
  + withDoctorEmail(v) : PatientProfileBuilder
  + withEmail(v) : PatientProfileBuilder
  + withPhone(v) : PatientProfileBuilder
  + withChronicConditions(v) : PatientProfileBuilder
  + withAllergies(v) : PatientProfileBuilder
  + withEmergencyContact(v) : PatientProfileBuilder
  + withInsuranceDetails(v) : PatientProfileBuilder
  + build() : Patient
  - validate() : void
}

class PatientProfileValidationException {
  + PatientProfileValidationException(message)
}
note right : extends RuntimeException

class PatientServiceImpl <<@Service>> {
  + createPatient(email, req) : Patient
}

class Patient <<entity: patients>> {
  + id : String
  + name : String
  + doctorEmail : String
}

PatientProfileBuilder ..> PatientProfileValidationException : <<throws on invalid>>
PatientProfileBuilder ..> Patient : <<builds>>
PatientServiceImpl    ..> PatientProfileBuilder : <<uses>>
@enduml